src/test/fail/basic_syntax/bad_right_brace.lly
#[
SyntaxError: Unexpected token ']'.
Where: File "bad_right_brace.lly" at line 6
]#

var a: list[integer] = []   a = [10]]
